# transession

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  ir.rs  lib.rs  main.rs
src/formats/: claude.rs  codex.rs  mod.rs
tests/: roundtrip.rs
tests/fixtures/: claude_current_sample.jsonl  claude_sample.jsonl  codex_current_sample.jsonl  codex_sample.jsonl
