[package]
name = "transession"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tempfile = "3.23.0"
